--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Tarun Kumar</title>
-				<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Tarun Kumar!</h1>
-				<p><a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/tarunkumariitm">github.com/tarunkumariitm</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Tarun Kumar!</h1>
+	<p>I'm a PhD scholar at <em>IIT Madras </em><a href="/about">Read more...</a></p>
+</div><!-- /.blurb -->
