--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Tarun Kumar, IIT Madras
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Tarun Kumar!</h1>
